--- a/app/html/login.html
+++ b/app/html/login.html
@@ -1,14 +1,16 @@
- <form role="form">
-  <div class="form-group">
-    <label for="email">Email address:</label>
-    <input type="email" class="form-control" id="email">
-  </div>
-  <div class="form-group">
-    <label for="pwd">Password:</label>
-    <input type="password" class="form-control" id="pwd">
-  </div>
-  <div class="checkbox">
-    <label><input type="checkbox"> Remember me</label>
-  </div>
-  <button type="submit" class="btn btn-default">Submit</button>
-</form>
+<div ng-controller="LoginController as login">
+    <form id="loginForm" role="form" ng-submit="doSumit()" >
+        <div class="form-group">
+            <label for="email">Email address:</label>
+            <input type="email" class="form-control" id="email" ng-model="email" required />
+        </div>
+        <div class="form-group">
+            <label for="pwd">Password:</label>
+            <input type="password" class="form-control" id="pwd" ng-model="password" required />
+        </div>
+        <div class="checkbox">
+            <label><input type="checkbox" > Remember me</label>
+        </div>
+        <button type="submit" class="btn btn-default" ng-click="onSubmit()">Submit</button>
+    </form>
+</div>
